# Archimedes

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/expressions/: Expression.h  ExpressionType.h  TernaryExpression.h  UnaryExpression.h
include/expressions/arithmetic/: Add.h  Constant.h  Divide.h  Integer.h  Multiply.h  Negation.h  Subtract.h
include/expressions/boolean/: Equal.h  GreaterThan.h  GreaterThanOrEqual.h  IfThenElse.h  LessThan.h  LessThanOrEqual.h  LogicalAnd.h  LogicalNot.h  LogicalOr.h  LogicalXor.h
include/expressions/core/: BinaryExpression.h  Expression.h  TernaryExpression.h
include/expressions/exponential/: Exponential.h  Factorial.h  Logarithm.h  NRoot.h  Power.h  SquareRoot.h
include/expressions/squashing/: ErrorFunction.h  ErrorFunctionComplement.h  GaussianFunction.h  HyperbolicTangent.h  LogisticFunction.h  SignFunction.h  StepFunction.h
include/expressions/trigonometric/: Arccosine.h  Arcsine.h  Arctangent.h  Arctangent2.h  Cosine.h  Sine.h  Tangent.h
include/expressions/utility/: AbsoluteValue.h  Ceiling.h  Floor.h  Maximum.h  Minimum.h  Modulo.h  Round.h
src/: main.cpp
src/expressions/arithmetic/: Add.cpp  Constant.cpp  Divide.cpp  Integer.cpp  Multiply.cpp  Negation.cpp  Subtract.cpp
src/expressions/boolean/: Equal.cpp  GreaterThan.cpp  GreaterThanOrEqual.cpp  IfThenElse.cpp  LessThan.cpp  LessThanOrEqual.cpp  LogicalAnd.cpp  LogicalNot.cpp  LogicalOr.cpp  LogicalXor.cpp
src/expressions/exponential/: Exponential.cpp  Factorial.cpp  Logarithm.cpp  NRoot.cpp  Power.cpp  SquareRoot.cpp
src/expressions/squashing/: ErrorFunction.cpp  ErrorFunctionComplement.cpp  GaussianFunction.cpp  HyperbolicTangent.cpp  LogisticFunction.cpp  SignFunction.cpp  StepFunction.cpp
src/expressions/trigonometric/: Arccosine.cpp  Arcsine.cpp  Arctangent.cpp  Arctangent2.cpp  Cosine.cpp  Sine.cpp  Tangent.cpp
src/expressions/utility/: AbsoluteValue.cpp  Ceiling.cpp  Floor.cpp  Maximum.cpp  Minimum.cpp  Modulo.cpp  Round.cpp
test/expressions/arithmetic/: Add_Tests.cpp  Constant_Tests.cpp  Divide_Tests.cpp  Integer_Tests.cpp  Multiply_Tests.cpp  Negation_Tests.cpp  Subtract_Tests.cpp
test/expressions/boolean/: Equal_Tests.cpp  GreaterThanOrEqual_Tests.cpp  GreaterThan_Tests.cpp  IfThenElse_Tests.cpp  LessThanOrEqual_Tests.cpp  LessThan_Tests.cpp  LogicalAnd_Tests.cpp  LogicalNot_Tests.cpp  LogicalOr_Tests.cpp  LogicalXor_Tests.cpp
test/expressions/exponential/: Exponential_Tests.cpp  Factorial_Tests.cpp  Logarithm_Tests.cpp  NRoot_Tests.cpp  Power_Tests.cpp  SquareRoot_Tests.cpp
test/expressions/squashing/: ErrorFunctionComplement_Tests.cpp  ErrorFunction_Tests.cpp  GaussianFunction_Tests.cpp  HyperbolicTangent_Tests.cpp  LogisticFunction_Tests.cpp  SignFunction_Test.cpp  StepFunction_Tests.cpp
test/expressions/trigonometric/: Arccosine_Tests.cpp  Arcsine_Tests.cpp  Arctangent2_Tests.cpp  Arctangent_Tests.cpp  Cosine_Tests.cpp  Sine_Tests.cpp  Tangent_Tests.cpp
test/expressions/utility/: AbsoluteValue_Tests.cpp  Ceiling_Tests.cpp  Floor_Tests.cpp  Maximum_Tests.cpp  Minimum_Tests.cpp  Modulo_Tests.cpp  Round_Tests.cpp
